Оверлей та Псевдоелемент

--- a/portfolio.html
+++ b/portfolio.html
@@ -17,9 +17,9 @@
         <a href="index.html" class="logo-main logo">Web<span class="logo-black logo">Studio</span></a>
         <nav>
           <ul class="nav-list list">
-            <li class="item"><a href="index.html" class="link">Студия</a></li>
-            <li class="item"><a href="portfolio.html" class="link active">Портфорио</a></li>
-            <li class="item"><a href="" class="link">Контакты</a></li>
+            <li class="item"><a href="index.html" class="link pseudo">Студия</a></li>
+            <li class="item"><a href="portfolio.html" class="link active pseudo">Портфорио</a></li>
+            <li class="item"><a href="" class="link pseudo">Контакты</a></li>
           </ul>
         </nav>
         <ul class="list contact-list">
@@ -46,8 +46,14 @@
             </ul>
            <ul class="list portfolio">
              <li>
-              <a href="#">
-                <img class="image" src="img/portfolio/img1.jpg" alt="img1">
+              <a href="#" class="thumb-link">
+                <div class="thumb">
+                  <img class="image" src="img/portfolio/img1.jpg" alt="img1">
+                  <p class="overlay-text">
+                    Технокряк это современная площадка распространения коронавируса. Компании используют эту платформу для цифрового
+                    шпионажа и атак на защищённые сервера конкурентов.
+                  </p>
+                </div>
                 <div class="border">
                   <h3 class="list-item">Технокряк</h3>
                   <p class="item-filter">Веб-сайт</p>
