--- a/index.html
+++ b/index.html
@@ -17,9 +17,9 @@
         <a href="index.html" class="logo-main logo">Web<span class="logo-black logo">Studio</span></a>
         <nav>
           <ul class="nav-list list">
-            <li class="item"><a href="index.html" class="link active">Студия</a></li>
-            <li class="item"><a href="portfolio.html" class="link">Портфорио</a></li>
-            <li class="item"><a href="" class="link">Контакты</a></li>
+            <li class="item"><a href="index.html" class="link active pseudo">Студия</a></li>
+            <li class="item"><a href="portfolio.html" class="link pseudo">Портфорио</a></li>
+            <li class="item"><a href="" class="link pseudo">Контакты</a></li>
           </ul>
         </nav>
         <ul class="list contact-list">
