--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
         <nav>
           <ul class="nav-list list">
             <li class="item"><a href="index.html" class="link active pseudo">Студия</a></li>
-            <li class="item"><a href="portfolio.html" class="link pseudo">Портфорио</a></li>
+            <li class="item"><a href="portfolio.html" class="link pseudo">Портфолио</a></li>
             <li class="item"><a href="" class="link pseudo">Контакты</a></li>
           </ul>
         </nav>
@@ -93,7 +93,12 @@
         <div class="container">
           <h2 class="section-header">Чем мы занимаемся</h2>
           <ul class="list">
-            <li><img src="img/task/task1.jpg" alt="task1" width="370"></li>
+            <li>
+              <div class="thumb">
+                <img src="img/task/task1.jpg" alt="task1" width="370">
+                <p class="task-overlay-text">десктопные приложения</p>
+              </div>
+            </li>
             <li><img src="img/task/task2.jpg" alt="task2" width="370"></li>
             <li><img src="img/task/task3.jpg" alt="task3" width="370"></li>
           </ul>
