--- a/portfolio.html
+++ b/portfolio.html
@@ -18,7 +18,7 @@
         <nav>
           <ul class="nav-list list">
             <li class="item"><a href="index.html" class="link pseudo">Студия</a></li>
-            <li class="item"><a href="portfolio.html" class="link active pseudo">Портфорио</a></li>
+            <li class="item"><a href="portfolio.html" class="link active pseudo">Портфолио</a></li>
             <li class="item"><a href="" class="link pseudo">Контакты</a></li>
           </ul>
         </nav>
@@ -138,49 +138,47 @@
       </main>
     <footer class="footer">
       <div class="container">
-        <div class="footer-wrapper">
-          <div class="adress-wrapper">
-            <a href="index.html" class="logo-main logo logo-footer">Web<span class="logo-white logo">Studio</span></a>
-            <address class="adress">г. Киев, пр-т Леси Украинки, 26</address>
-            <ul class="contact-list list ">
-              <li class="footer-list"><a href="mailto:info@example.com" class="list footer-list-item">info@example.com</a>
-              </li>
-              <li class="footer-list"><a href="tel:+380991111111" class="list footer-list-item">+38 099 111 11 11</a></li>
-            </ul>
-          </div>
-          <div class="footer-icons">
-            <p class="join-us">ПРИСОИДЕНЯЙТЕСЬ</p>
-            <ul class="list footer-icons-list">
-              <li class="icons-list-item">
-                <a class="footer-sotial-link" href="#">
-                  <svg class="footer-icons-list-item">
-                    <use href="/img/icons.svg#icon-instagramm"></use>
-                  </svg>
-                </a>
-              </li>
-              <li class="icons-list-item">
-                <a class="footer-sotial-link" href="#">
-                  <svg class="footer-icons-list-item">
-                    <use href="/img/icons.svg#icon-twitter"></use>
-                  </svg>
-                </a>
-              </li>
-              <li class="icons-list-item">
-                <a class="footer-sotial-link" href="#">
-                  <svg class="footer-icons-list-item">
-                    <use href="/img/icons.svg#icon-facebook"></use>
-                  </svg>
-                </a>
-              </li>
-              <li class="icons-list-item">
-                <a class="footer-sotial-link" href="#">
-                  <svg class="footer-icons-list-item">
-                    <use href="/img/icons.svg#icon-linkedin"></use>
-                  </svg>
-                </a>
-              </li>
-            </ul>
-          </div>
+        <div class="adress-wrapper">
+          <a href="index.html" class="logo-main logo logo-footer">Web<span class="logo-white logo">Studio</span></a>
+          <address class="adress">г. Киев, пр-т Леси Украинки, 26</address>
+          <ul class="contact-list list ">
+            <li class="footer-list"><a href="mailto:info@example.com" class="list footer-list-item">info@example.com</a>
+            </li>
+            <li class="footer-list"><a href="tel:+380991111111" class="list footer-list-item">+38 099 111 11 11</a></li>
+          </ul>
+        </div>
+        <div class="footer-icons">
+          <p class="join-us">ПРИСОИДЕНЯЙТЕСЬ</p>
+          <ul class="list footer-icons-list">
+            <li class="icons-list-item">
+              <a class="footer-sotial-link" href="#">
+                <svg class="footer-icons-list-item">
+                  <use href="img/icons.svg#icon-instagramm"></use>
+                </svg>
+              </a>
+            </li>
+            <li class="icons-list-item">
+              <a class="footer-sotial-link" href="#">
+                <svg class="footer-icons-list-item">
+                  <use href="img/icons.svg#icon-twitter"></use>
+                </svg>
+              </a>
+            </li>
+            <li class="icons-list-item">
+              <a class="footer-sotial-link" href="#">
+                <svg class="footer-icons-list-item">
+                  <use href="img/icons.svg#icon-facebook"></use>
+                </svg>
+              </a>
+            </li>
+            <li class="icons-list-item">
+              <a class="footer-sotial-link" href="#">
+                <svg class="footer-icons-list-item">
+                  <use href="img/icons.svg#icon-linkedin"></use>
+                </svg>
+              </a>
+            </li>
+          </ul>
         </div>
       </div>
     </footer>
