--- a/index.html
+++ b/index.html
@@ -18,8 +18,8 @@
         <nav>
           <ul class="nav-list list">
             <li class="item"><a href="index.html" class="link active pseudo">Студия</a></li>
-            <li class="item"><a href="portfolio.html" class="link pseudo">Портфолио</a></li>
-            <li class="item"><a href="" class="link pseudo">Контакты</a></li>
+            <li class="item"><a href="portfolio.html" class="link">Портфолио</a></li>
+            <li class="item"><a href="" class="link">Контакты</a></li>
           </ul>
         </nav>
         <ul class="list contact-list">
@@ -35,7 +35,7 @@
     <main>
       <section class="hero-page">
           <h1 class="hero-header">ЭФФЕКТИВНЫЕ РЕШЕНИЯ <br> ДЛЯ ВАШЕГО БИЗНЕСА</h1>
-          <button type="button" class="hero-page-button">Заказать услугу</button>
+          <button data-modal-open type="button" class="hero-page-button">Заказать услугу</button>
       </section>
       <section class="description descr-section">
         <div class="container">
@@ -99,8 +99,18 @@
                 <p class="task-overlay-text">десктопные приложения</p>
               </div>
             </li>
-            <li><img src="img/task/task2.jpg" alt="task2" width="370"></li>
-            <li><img src="img/task/task3.jpg" alt="task3" width="370"></li>
+            <li>
+              <div class="thumb">
+                <img src="img/task/task2.jpg" alt="task2" width="370">
+                <p class="task-overlay-text">мобильные приложения</p>
+              </div>
+            </li>
+            <li>
+              <div class="thumb">
+                <img src="img/task/task3.jpg" alt="task3" width="370">
+                <p class="task-overlay-text">дизайнерские решения</p>
+              </div>
+            </li>
           </ul>
         </div>
       </section>
@@ -355,5 +365,15 @@
           </div>
       </div>
     </footer>
+    <div class="backdrop is-hidden" data-modal>
+      <div class="modal">
+        <button data-modal-close type="button" class="modal-button">
+          <svg class="icon-button">
+            <use href="img/icons.svg#icon-button"></use>
+          </svg>
+        </button>
+      </div>
+    </div>
+  <script src="./js/modal.js"></script>
   </body>
 </html>
