--- a/portfolio.html
+++ b/portfolio.html
@@ -17,9 +17,9 @@
         <a href="index.html" class="logo-main logo">Web<span class="logo-black logo">Studio</span></a>
         <nav>
           <ul class="nav-list list">
-            <li class="item"><a href="index.html" class="link pseudo">Студия</a></li>
+            <li class="item"><a href="index.html" class="link">Студия</a></li>
             <li class="item"><a href="portfolio.html" class="link active pseudo">Портфолио</a></li>
-            <li class="item"><a href="" class="link pseudo">Контакты</a></li>
+            <li class="item"><a href="" class="link">Контакты</a></li>
           </ul>
         </nav>
         <ul class="list contact-list">
@@ -182,5 +182,6 @@
         </div>
       </div>
     </footer>
+
   </body>
 </html>
