--- a/index.html
+++ b/index.html
@@ -96,19 +96,25 @@
             <li>
               <div class="thumb">
                 <img src="img/task/task1.jpg" alt="task1" width="370">
-                <p class="task-overlay-text">десктопные приложения</p>
+                <div class="text-thumb">
+                  <p class="task-overlay-text">десктопные приложения</p>
+                </div>
               </div>
             </li>
             <li>
               <div class="thumb">
                 <img src="img/task/task2.jpg" alt="task2" width="370">
-                <p class="task-overlay-text">мобильные приложения</p>
+                <div class="text-thumb">
+                  <p class="task-overlay-text">мобильные приложения</p>
+                </div>
               </div>
             </li>
             <li>
               <div class="thumb">
                 <img src="img/task/task3.jpg" alt="task3" width="370">
-                <p class="task-overlay-text">дизайнерские решения</p>
+                <div class="text-thumb">
+                  <p class="task-overlay-text">дизайнерские решения</p>
+                </div>
               </div>
             </li>
           </ul>
